--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-A fork of Rocksaw (http://www.savarese.com/software/rocksaw/) that includes Maven support.
+A fork of RockSaw (http://www.savarese.com/software/rocksaw/) that includes Maven support.
 
 Please note that the JNI stuff needs a bit of love to build - the Makefile was mangled (by me).
+
+Maven Repository:
+
+You can find RockSaw deployed here: https://dev.limone.me/nexus/content/groups/public/
